[tool.poetry]
name = "api-memes"
version = "0.1.0"
description = ""
authors = ["Zubayr Bibulatov <Ru.Zubayr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
mako = "^1.3.5"
alembic = "^1.13.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

